modif de l'en-tête

--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Maquette-une-Fg</title>
+    <title>Maquette-Fgma1</title>
 </head>
+
 <body>
     <div class="conteneur">
         <div class="en-tête">
-            <span>Accueil</span>
-            <span>Nos Services</span>
-            <span>Pack Premium</span>
-            <span>Blog</span>
-            <span>Contact</span>
+            <a href="">Accueil</a>
+            <a href="">Nos Services</a>
+            <a href="">Pack Premium</a>
+            <a href="">Blog</a>
+            <a href="">Contact</a>
         </div>
         <div class="corps">
             <img src="Images/PC.jpg" alt="ordinateur">
@@ -22,4 +24,5 @@
     </div>
 
 </body>
+
 </html>
